# rustgrid-agent

./: .dockerignore  .gitignore  .rustgrid-agent.example.json  .rustgrid-agent.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deny.toml  openapi.current.json  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
deploy/: README.md  compose.yml
deploy/kubernetes/: worker-cronjob.yaml
docs/: architecture.md  compatibility.md  device-authentication.md  known-limitations.md  operations.md  release-checklist.md  staging-certification.md  staging-evidence-template.md  telemetry.md  threat-model.md  worker-api-contract.md
docs/releases/: v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.2.0.md  v1.3.0.md
packaging/homebrew/: rustgrid-agent.rb.in  rustgrid-cli.rb.in
packaging/systemd/: rustgrid-agent.service
scripts/: cargo-quality-gate.sh  check-secrets.sh
src/: api.rs  attachments.rs  auth.rs  command.rs  config.rs  coordinator.rs  credentials.rs  execution.rs  executor.rs  finalization.rs  git.rs  github.rs  health.rs  journal.rs  lib.rs  lifecycle.rs  main.rs  manifest.rs  mission.rs  optimization.rs  outcome.rs  prompt.rs  publishing.rs  reporting.rs  run_error.rs  runner.rs  setup.rs  shutdown.rs  supervisor.rs  telemetry.rs  token.rs  token_consumption.rs  workspace.rs
tests/: api_contract.rs  cli.rs
