[package]
name = "rustgrid-agent"
version = "1.2.0"
edition = "2024"
rust-version = "1.94"
description = "Run Codex against RustGrid tickets and publish the result as a GitHub pull request"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/RustGrid/rustgrid-agent"
repository = "https://github.com/RustGrid/rustgrid-agent"
keywords = ["automation", "cli", "github", "rustgrid"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["openapi.current.json", ".rustgrid-agent.json"]

[[bin]]
name = "rustgrid-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
keyring = "4.1.5"
shlex = "2.0"
uuid = { version = "1.11", features = ["serde", "v4", "v5"] }

[dev-dependencies]
tempfile = "3.14"
